addition at buildout for facebook

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,10 +8,19 @@ find-links =
 
 versions = versions
 
+extends =
+    versions.cfg
+
+show-picked-versions = true
+
 [versions]
 django = 1.3.1
 djangorecipe = 1.1.2
 django-lfs = 0.7.7
+
+[sources]
+lfs_facebook = git git@github.com:filippo91/lfs_facebook.git
+lfs_responsivetheme = git git@github.com:redomino/lfs_responsivetheme.git
 
 [django-gunicorn]
 recipe = collective.recipe.template
@@ -25,10 +34,14 @@ recipe = djangorecipe
 eggs =
     django-lfs
     gunicorn
+    django_facebook
 project = lfs_project
 settings=settings
 extra-paths =
     ${buildout:directory}/parts
     ${buildout:directory}/lfs_project
+    ${buildout:directory}/src
+    ${buildout:directory}/src/lfs_facebook
+    ${buildout:directory}/src/lfs_responsivetheme
 
 urls = lfs_project/urls
