--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,4 +1,6 @@
 [buildout]
+extensions = mr.developer
+
 parts =
     django
     django-gunicorn
@@ -13,14 +15,16 @@ extends =
 
 show-picked-versions = true
 
+auto-checkout = *
+
 [versions]
 django = 1.3.1
 djangorecipe = 1.1.2
 django-lfs = 0.7.7
 
 [sources]
-lfs_facebook = git git@github.com:filippo91/lfs_facebook.git
-lfs_responsivetheme = git git@github.com:redomino/lfs_responsivetheme.git
+lfs_facebook = git https://github.com/filippo91/lfs_facebook.git 
+lfs_responsivetheme = git https://github.com/redomino/lfs_responsivetheme.git 
 
 [django-gunicorn]
 recipe = collective.recipe.template
